# ninja

./: .hgignore  AUTHORS  Makefile.am  PACKAGE_DESCRIPTION  README  README.md  configure.ac
.github/workflows/: main.yml
examples/: 4photons.cc  4photons_num.cc  4photons_num.hh  6photons.cc  6photons.py  6photons_init.cc  6photons_num.cc  6photons_num.hh  Makefile.am  mynum.cc  mynum.hh  mynumhr.cc  mynumhr.hh  quadninja_test.py  quadninja_test.sh  simple_higher_rank_test.cc  simple_higher_rank_test.py  simple_test.cc  simple_test.py  thread_4photons.cc  thread_6photons.cc  ttbarh.cc  ttbarh.sh  ttbarh_init.cc  ttbarh_num.cc  ttbarh_num.hh
m4/: m4_ax_cxx_quadmath.m4
src/: Makefile.am  Xcuts.cc  Xcuts.hh  Xninja.cc  avholo_decls.hh  avholo_interface.cc  avholo_wrapper.F90  basis.cc  basis.hh  coefficient_level_subs.cc  coefficient_level_subs.hh  cuts.cc  cuts.hh  cuts_utils-inl.hh  cuts_utils.cc  cuts_utils.hh  cuts_vector.hh  gosam_interface.cc  gosam_interface.hh  integral_library.cc  integral_library_wrapper.hh  looptools_interface.cc  mninja.F90  ninja.cc  ninja_hash_table.hh  ninja_implem.cxx  ninja_scoped_array.hh  ninja_wraps.cc  ninjago.F90  ninjavholo.F90  polys_implem.cxx  rambo.cc  spinors.cc  tensor_ninja.cc  tmp_utils.hh
src/ninja/: avholo.hh  integral_library.hh  looptools.hh  momentum.hh  ninja.hh  ninja_in.hh  ninjanumgen.hh  num_defs.hh  quadruple.hh  rambo.hh  s_mat.hh  spinors.hh  static_arrays.hh  tensor_ninja.hh  types.hh  zero_float.hh
src/quadninja/: Makefile.am
utils/: setup.py
utils/ninjanumgen/: ninjanumgen  ninjanumgen.py
utils/ninjanumgen/templates/: ninja_laurent.frm  ninja_opt.frm  ninjanumgen_template.cc  ninjanumgen_template.hh
